--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "author": "Andrey Gorokhov",
     "repository": {
         "type": "git",
-        "url": "https://github.com/andreyalexeich/gulp-scss-starter.git"
+        "url": "https://gitlab.com/omk-company/portal-html-v2.git"
     },
     "license": "MIT",
     "scripts": {
@@ -35,13 +35,16 @@
         "gulp": "^4.0.0",
         "gulp-autoprefixer": "^6.1.0",
         "gulp-clean-css": "^4.2.0",
+        "gulp-data": "^1.3.1",
         "gulp-debug": "^4.0.0",
         "gulp-favicons": "^2.3.1",
         "gulp-file-include": "^2.0.1",
         "gulp-group-css-media-queries": "^1.2.2",
         "gulp-if": "^2.0.2",
         "gulp-imagemin": "^6.0.0",
+        "gulp-nunjucks-render": "^2.2.3",
         "gulp-plumber": "^1.2.0",
+        "gulp-prettify": "^0.5.0",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.0.2",
@@ -55,6 +58,7 @@
         "imagemin-pngquant": "^8.0.0",
         "imagemin-webp": "^5.0.0",
         "imagemin-zopfli": "^6.0.0",
+        "nunjucks": "^3.2.0",
         "require-dir": "^1.2.0",
         "stylelint": "^10.0.1",
         "stylelint-order": "^3.0.0",
@@ -64,7 +68,8 @@
         "yargs": "^13.2.4"
     },
     "dependencies": {
-        "npm": "^6.13.6",
-        "smart-grid": "^2.1.2"
+        "bootstrap": "^4.4.1",
+        "jquery": "^3.4.1",
+        "npm": "^6.13.7"
     }
 }
