--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,5 +1,1 @@
-./src/styles/vendor/import/*.scss
-./src/styles/base/_fonts.scss
-./src/styles/base/_general.scss
-./src/styles/helpers/_functions.scss
-./src/styles/helpers/_variables.scss
+./src/styles/**/_{*}.scss
