--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "dependencies": {
         "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
-        "npm": "^6.13.7"
+        "npm": "^6.13.7",
+        "popper.js": "^1.16.1"
     }
 }
