text-page, like, comment, thumbl slider

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -247,8 +247,8 @@
         "string-no-newline": [true, {
             "message": "В строчных данных не должно быть переносов"
         }],
-        "string-quotes": ["double", {
-            "message": "В проекте двойные кавычки"
+        "string-quotes": ["single", {
+            "message": "В проекте одинарные кавычки"
         }],
 
         "selector-attribute-operator-blacklist": [["id"], {
