--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     },
     "dependencies": {
         "bootstrap": "^4.4.1",
+        "imports-loader": "^0.8.0",
         "jquery": "^3.4.1",
+        "jquery-mousewheel": "^3.1.13",
+        "malihu-custom-scrollbar-plugin": "^3.1.5",
         "npm": "^6.13.7",
         "object-fit-images": "^3.2.4",
         "popper.js": "^1.16.1",
