--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "dependencies": {
         "bootstrap": "^4.4.1",
         "imports-loader": "^0.8.0",
-        "jquery": "^3.4.1",
+        "jquery": "3.4.1",
         "jquery-mousewheel": "^3.1.13",
         "malihu-custom-scrollbar-plugin": "^3.1.5",
         "npm": "^6.13.7",
