--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
         "yargs": "^13.2.4"
     },
     "dependencies": {
+        "air-datepicker": "^2.2.3",
         "bootstrap": "^4.4.1",
+        "bootstrap-select": "^1.13.16",
         "imports-loader": "^0.8.0",
         "jquery": "3.4.1",
         "jquery-mousewheel": "^3.1.13",
