--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "air-datepicker": "^2.2.3",
         "bootstrap": "^4.4.1",
         "bootstrap-select": "^1.13.16",
+        "brazzers-carousel": "^1.0.1",
         "imports-loader": "^0.8.0",
         "jquery": "3.4.1",
         "jquery-mousewheel": "^3.1.13",
