--- a/src/.htaccess
+++ b/src/.htaccess
@@ -2,7 +2,7 @@
 ErrorDocument 404 /404.html
 
 <IfModule mod_headers.c>
-    <FilesMatch "\.(js|css|gif|png|jpe?g|pdf|xml|oga|ogg|m4a|ogv|mp4|m4v|webm|svg|svgz|woff|woff2|ico|webp|appcache|manifest|htc|crx|oex|xpi|safariextz|vcf)$">
+    <FilesMatch "\.(js|css|gif|png|jpe?g|pdf|xml|oga|ogg|m4a|ogv|mp4|m4v|webm|svg|svgz|woff|ttf|ico|webp|appcache|manifest|htc|crx|oex|xpi|safariextz|vcf)$">
         Header unset X-UA-Compatible
     </FilesMatch>
 </IfModule>
@@ -17,7 +17,7 @@ ErrorDocument 404 /404.html
 </IfModule>
 
 <IfModule mod_headers.c>
-    <FilesMatch "\.(woff|woff2)$">
+    <FilesMatch "\.(woff|ttf)$">
         Header set Access-Control-Allow-Origin "*"
     </FilesMatch>
 </IfModule>
@@ -41,7 +41,7 @@ AddEncoding gzip .svgz
 
 # Fonts
 AddType application/x-font-woff .woff
-AddType application/font-woff2 .woff2
+AddType application/font-ttf .ttf
 
 # Other
 AddType image/x-icon .ico
@@ -157,7 +157,7 @@ AddType text/vtt .vtt
 
     # Fonts
     ExpiresByType application/x-font-woff "access plus 1 year"
-    ExpiresByType application/font-woff2 "access plus 1 year"
+    ExpiresByType application/font-ttf "access plus 1 year"
 
     # Other
     ExpiresByType text/x-cross-domain-policy "access plus 1 week"
