--- a/.browserlistrc
+++ b/.browserlistrc
@@ -1,5 +1,13 @@
-last 3 versions
-> 1%
-ie 11
+and_chr 75
+and_ff 67
+and_qq 1.2
+and_uc 11.8
+baidu 7.12
+bb 10
+chrome 60
 ie 10
-edge 12
+firefox 67
+ios_saf 11
+opera 48
+safari 11
+samsung 6.2
