--- a/package.json
+++ b/package.json
@@ -7,6 +7,22 @@
         "url": "https://gitlab.com/omk-company/portal-html-v2.git"
     },
     "license": "MIT",
+    "browserslist": [
+        "and_chr 75",
+        "and_ff 67",
+        "and_qq 1.2",
+        "and_uc 11.8",
+        "baidu 7.12",
+        "bb 10",
+        "chrome 60",
+        "edge 12",
+        "ie 10",
+        "firefox 67",
+        "ios_saf 11",
+        "opera 48",
+        "safari 11",
+        "samsung 6.2"
+    ],
     "scripts": {
         "dev": "gulp",
         "build": "gulp prod --production",
@@ -23,22 +39,22 @@
         "lint:style --fix": "stylelint \"src/**/*.scss\" --syntax=scss --fix"
     },
     "devDependencies": {
-        "@babel/core": "^7.4.3",
-        "@babel/preset-env": "^7.4.3",
-        "@babel/register": "^7.4.0",
-        "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.5",
-        "bem-tools-core": "bem-tools/bem-tools-core",
-        "bem-tools-create": "bem-tools/bem-tools-create",
+        "@babel/core": "^7.10.2",
+        "@babel/preset-env": "^7.10.2",
+        "@babel/register": "^7.10.1",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
+        "bem-tools-core": "github:bem-tools/bem-tools-core",
+        "bem-tools-create": "github:bem-tools/bem-tools-create",
         "browser-sync": "^2.23.6",
         "del": "^4.1.1",
         "gulp": "^4.0.0",
         "gulp-autoprefixer": "^6.1.0",
-        "gulp-clean-css": "^4.2.0",
+        "gulp-clean-css": "^4.3.0",
         "gulp-data": "^1.3.1",
         "gulp-debug": "^4.0.0",
         "gulp-favicons": "^2.3.1",
-        "gulp-file-include": "^2.0.1",
+        "gulp-file-include": "^2.2.2",
         "gulp-group-css-media-queries": "^1.2.2",
         "gulp-if": "^2.0.2",
         "gulp-imagemin": "^6.0.0",
@@ -47,7 +63,7 @@
         "gulp-prettify": "^0.5.0",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^1.0.0",
-        "gulp-sass": "^4.0.2",
+        "gulp-sass": "^4.1.0",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-svg-sprite": "^1.5.0",
         "gulp-watch": "^5.0.0",
@@ -58,27 +74,27 @@
         "imagemin-pngquant": "^8.0.0",
         "imagemin-webp": "^5.0.0",
         "imagemin-zopfli": "^6.0.0",
-        "nunjucks": "^3.2.0",
+        "nunjucks": "^3.2.1",
         "require-dir": "^1.2.0",
         "stylelint": "^10.0.1",
         "stylelint-order": "^3.0.0",
         "stylelint-selector-bem-pattern": "^2.1.0",
-        "webpack": "^4.30.0",
+        "webpack": "^4.43.0",
         "webpack-stream": "^5.2.1",
-        "yargs": "^13.2.4"
+        "yargs": "^13.3.2"
     },
     "dependencies": {
         "air-datepicker": "^2.2.3",
-        "bootstrap": "^4.4.1",
+        "bootstrap": "^4.5.0",
         "bootstrap-select": "^1.13.16",
         "brazzers-carousel": "^1.0.1",
         "imports-loader": "^0.8.0",
         "jquery": "3.4.1",
         "jquery-mousewheel": "^3.1.13",
         "malihu-custom-scrollbar-plugin": "^3.1.5",
-        "npm": "^6.13.7",
+        "npm": "^6.14.5",
         "object-fit-images": "^3.2.4",
         "popper.js": "^1.16.1",
-        "swiper": "^5.3.6"
+        "swiper": "^5.4.3"
     }
 }
