--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
         "@babel/register": "^7.10.1",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.1.0",
-        "bem-tools-core": "github:bem-tools/bem-tools-core",
-        "bem-tools-create": "github:bem-tools/bem-tools-create",
+        "bem-tools-core": "0.0.3",
+        "bem-tools-create": "^2.3.0",
         "browser-sync": "^2.23.6",
         "del": "^4.1.1",
         "gulp": "^4.0.0",
